# ready-player-me

./: README.md  pyproject.toml  requirements.txt
ready_player_me/: __init__.py  animation_handler.py  armature.py  data.py  head_handler.py  util.py
ready_player_me/configs/: __init__.py  fbx.py  gltf.py
ready_player_me/vcs/: unity_vcs.py
