[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["ready_player_me"]


[project]
name = "ready-player-me"
authors = [
    {name = "Hannes"},
    {name = "Olaf"},
    {name = "Daniel"},
]

description = "blender API for RPM"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["blender"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', "pyblend @ git+https://github.com/readyplayerme/pyblend"]
#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/..."
Source = "https://github.com/..."
